# r_delta

./: Cargo.toml  README.md  bench.py
.github/workflows/: release.yml
crates/client/: Cargo.toml  LICENSE
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  crypto.rs  delta.rs  diff.rs  encryption.rs  lib.rs  manifest.rs  network.rs  patch.rs  pipeline.rs  protocol.rs  signature.rs
crates/core/tests/: chaos_test.rs
crates/server/: Cargo.toml  LICENSE
crates/server/src/: main.rs
src/: delta.rs  lib.rs  main.rs  patch.rs  signature.rs  verify.rs
