[package]
name = "r_delta_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"

[dependencies]
hex.workspace = true
blake3.workspace = true
zstd.workspace = true
serde.workspace = true
bincode.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
ignore.workspace = true
rayon.workspace = true
pathdiff.workspace = true
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
proptest = "1.5"
rand = "0.8"

